--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Tech Beez || HomePage</title>
 </head>
 <body>
+    <!-- header  -->
+    <header>
+        <nav>
+            
+        </nav>
+    </header>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
