--- a/index.html
+++ b/index.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>Tech Beez || HomePage</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
+    <!-- custom css -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <title>Tech Bees || HomePage</title>
+  </head>
+  <body>
     <!-- header  -->
     <header>
-        <nav>
-            
-        </nav>
+      <nav class="navbar">
+        <img src="assets/images/logo.png" alt="logo" class="logo" />
+        <ul class="nav__list">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#" class="cta">Contact Us</a></li>
+        </ul>
+      </nav>
+      <!-- hero section -->
+      <div class="row">
+        <div class="header__content">
+          <h1>We Are start up creative agency</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+            tempora eius rerum neque ab voluptates placeat error saepe <br>
+            exercitationem eos laudantium adipisci nesciunt, consequuntur iste,
+            ipsa, vitae sapiente explicabo perferendis!
+          </p>
+          <a href="#" class="btn">Learn More</a>
+          <a href="#" class="cta">Contact Us</a>
+        </div>
+        <div class="hero__img">
+            <img src="assets/images/hero-img.svg" alt="">
+        </div>
+      </div>
     </header>
     <script src="assets/js/main.js"></script>
-</body>
+  </body>
 </html>
