--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h1>We Are start up creative agency</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
-            tempora eius rerum neque ab voluptates placeat error saepe <br>
+            tempora eius rerum neque ab voluptates placeat error saepe <br />
             exercitationem eos laudantium adipisci nesciunt, consequuntur iste,
             ipsa, vitae sapiente explicabo perferendis!
           </p>
@@ -43,10 +43,51 @@
           <a href="#" class="cta">Contact Us</a>
         </div>
         <div class="hero__img">
-            <img src="assets/images/hero-img.svg" alt="">
+          <img src="assets/images/hero-img.svg" alt="" />
         </div>
       </div>
     </header>
+    <!-- services -->
+    <section class="services">
+      <div class="container">
+        <div class="grid-wrapper">
+          <div class="grid-box mobileapp">
+              <img src="assets/images/mobileapp.png" alt="">
+              <h1>Mobile App</h1>
+          </div>
+          <div class="grid-box webdesign">
+            <img src="assets/images/webdesign.png" alt="">
+            <h1>Web Design</h1>
+          </div>
+          <div class="grid-box marketing">
+            <img src="assets/images/marketing.png" alt="">
+            <h1>Marketing</h1>
+          </div>
+          <div class="grid-box branding">
+            <img src="assets/images/branding.png" alt="">
+            <h1>Branding</h1>
+          </div>
+        </div>
+        <div class="services__content">
+            <div class="circle">
+                <img src="assets/images/circle.svg" alt="">
+            </div>
+          <h1>Our best services</h1>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed magnam
+            eius suscipit, reprehenderit temporibus fuga earum error, esse
+            adipisci illum beatae commodi, sunt explicabo! Laborum repellendus
+            omnis voluptates sapiente esse?
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam,
+            esse suscipit aut ad enim excepturi impedit labore obcaecati porro
+            temporibus.
+          </p>
+          <a href="#" class="cta">Learn More</a>
+        </div>
+      </div>
+    </section>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
