compelete numbers section

--- a/index.html
+++ b/index.html
@@ -52,26 +52,26 @@
       <div class="container">
         <div class="grid-wrapper">
           <div class="grid-box mobileapp">
-              <img src="assets/images/mobileapp.png" alt="">
-              <h1>Mobile App</h1>
+            <img src="assets/images/mobileapp.png" alt="" />
+            <h1>Mobile App</h1>
           </div>
           <div class="grid-box webdesign">
-            <img src="assets/images/webdesign.png" alt="">
+            <img src="assets/images/webdesign.png" alt="" />
             <h1>Web Design</h1>
           </div>
           <div class="grid-box marketing">
-            <img src="assets/images/marketing.png" alt="">
+            <img src="assets/images/marketing.png" alt="" />
             <h1>Marketing</h1>
           </div>
           <div class="grid-box branding">
-            <img src="assets/images/branding.png" alt="">
+            <img src="assets/images/branding.png" alt="" />
             <h1>Branding</h1>
           </div>
         </div>
         <div class="services__content">
-            <div class="circle">
-                <img src="assets/images/circle.svg" alt="">
-            </div>
+          <div class="circle">
+            <img src="assets/images/circle.svg" alt="" />
+          </div>
           <h1>Our best services</h1>
           <p>
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sed magnam
@@ -85,6 +85,39 @@
             temporibus.
           </p>
           <a href="#" class="cta">Learn More</a>
+        </div>
+      </div>
+    </section>
+    <!-- NUmbers -->
+    <section class="numbers">
+      <h1 class="numbers__title">We lead from front</h1>
+      <p class="numbers__subtitle">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+        asperiores sunt quasi animi molestias distinctio nam explicabo quos
+        sint. Sit aut doloremque perspiciatis quasi blanditiis enim laudantium
+        nesciunt vero totam?
+      </p>
+      <div class="container">
+        <div class="grid-wrapper">
+          <div class="grid-box one">
+            <h1>2500+</h1>
+            <h2>Happy Client</h2>
+          </div>
+          <div class="grid-box two">
+            <h1>500+</h1>
+            <h2>Project Completed</h2>
+          </div>
+          <div class="grid-box three">
+            <h1>769+</h1>
+            <h2>Running Projects</h2>
+          </div>
+          <div class="grid-box four">
+            <h1>1000+</h1>
+            <h2>Awesome Design</h2>
+          </div>
+        </div>
+        <div class="mockup__img">
+            <img src="assets/images/team-mockup.png" alt="">
         </div>
       </div>
     </section>
