compelete Project section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,61 @@
         </div>
       </div>
     </section>
+    <!-- Projects -->
+    <section class="projects">
+        <h1>Our latest Projects</h1>
+        <div class="projects__images">
+            <div class="project__img">
+                <img src="assets/images/project-1.jpg" alt="">
+
+                <div class="details">
+                        <h2>Creative</h2>
+                        <h1>Web Development</h1>
+                        <i class="fa fa-arrow-circle-right"></i>
+                </div>
+            </div>
+            <div class="project__img">
+                <img src="assets/images/project-2.jpg" alt="">
+                <div class="details">
+                    <h2>Creative</h2>
+                    <h1>Web Development</h1>
+                    <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            </div>
+            <div class="project__img">
+                <img src="assets/images/project-3.jpg" alt="">
+                <div class="details">
+                    <h2>Creative</h2>
+                    <h1>Web Development</h1>
+                    <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            </div>
+            <div class="project__img">
+                <img src="assets/images/project-4.jpg" alt="">
+                <div class="details">
+                    <h2>Creative</h2>
+                    <h1>Web Development</h1>
+                    <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            </div>
+            <div class="project__img">
+                <img src="assets/images/project-5.jpg" alt="">
+                <div class="details">
+                    <h2>Creative</h2>
+                    <h1>Web Development</h1>
+                    <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            </div>
+            <div class="project__img">
+                <img src="assets/images/project-6.jpg" alt="">
+                <div class="details">
+                    <h2>Creative</h2>
+                    <h1>Web Development</h1>
+                    <i class="fa fa-arrow-circle-right"></i>
+            </div>
+            </div>
+        </div>
+    </section>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
