compelete TeamMember section

--- a/index.html
+++ b/index.html
@@ -176,6 +176,61 @@
             </div>
         </div>
     </section>
+    <!-- team section -->
+        <section class="team">
+            <h1>Meet Our Team</h1>
+            <div class="grid-wrapper">
+                <div class="team__member">
+                    <img src="assets/images/team1.png" alt="">
+                    <h1>John Smith</h1>
+                    <h2>CEO & Founder</h2>
+                    <div class="social__icons">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
+
+                    </div>
+                </div>
+                <div class="team__member">
+                    <img src="assets/images/team3.png" alt="">
+                    <h1>Smith</h1>
+                    <h2>web Design</h2>
+                    <div class="social__icons">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
+
+                    </div>
+                </div>
+                <div class="team__member">
+                    <img src="assets/images/team4.png" alt="">
+                    <h1>John</h1>
+                    <h2>Web Development</h2>
+                    <div class="social__icons">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
+
+                    </div>
+                </div>
+                <div class="team__member">
+                    <img src="assets/images/team2.png" alt="">
+                    <h1>Sophia</h1>
+                    <h2>Manager</h2>
+                    <div class="social__icons">
+                        <i class="fab fa-facebook"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-linkedin"></i>
+
+                    </div>
+                </div>
+
+            </div>
+        </section>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
