compelete testm section

--- a/index.html
+++ b/index.html
@@ -117,120 +117,168 @@
           </div>
         </div>
         <div class="mockup__img">
-            <img src="assets/images/team-mockup.png" alt="">
+          <img src="assets/images/team-mockup.png" alt="" />
         </div>
       </div>
     </section>
     <!-- Projects -->
     <section class="projects">
-        <h1>Our latest Projects</h1>
-        <div class="projects__images">
-            <div class="project__img">
-                <img src="assets/images/project-1.jpg" alt="">
+      <h1>Our latest Projects</h1>
+      <div class="projects__images">
+        <div class="project__img">
+          <img src="assets/images/project-1.jpg" alt="" />
 
-                <div class="details">
-                        <h2>Creative</h2>
-                        <h1>Web Development</h1>
-                        <i class="fa fa-arrow-circle-right"></i>
-                </div>
-            </div>
-            <div class="project__img">
-                <img src="assets/images/project-2.jpg" alt="">
-                <div class="details">
-                    <h2>Creative</h2>
-                    <h1>Web Development</h1>
-                    <i class="fa fa-arrow-circle-right"></i>
-            </div>
-            </div>
-            <div class="project__img">
-                <img src="assets/images/project-3.jpg" alt="">
-                <div class="details">
-                    <h2>Creative</h2>
-                    <h1>Web Development</h1>
-                    <i class="fa fa-arrow-circle-right"></i>
-            </div>
-            </div>
-            <div class="project__img">
-                <img src="assets/images/project-4.jpg" alt="">
-                <div class="details">
-                    <h2>Creative</h2>
-                    <h1>Web Development</h1>
-                    <i class="fa fa-arrow-circle-right"></i>
-            </div>
-            </div>
-            <div class="project__img">
-                <img src="assets/images/project-5.jpg" alt="">
-                <div class="details">
-                    <h2>Creative</h2>
-                    <h1>Web Development</h1>
-                    <i class="fa fa-arrow-circle-right"></i>
-            </div>
-            </div>
-            <div class="project__img">
-                <img src="assets/images/project-6.jpg" alt="">
-                <div class="details">
-                    <h2>Creative</h2>
-                    <h1>Web Development</h1>
-                    <i class="fa fa-arrow-circle-right"></i>
-            </div>
-            </div>
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
         </div>
+        <div class="project__img">
+          <img src="assets/images/project-2.jpg" alt="" />
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
+        </div>
+        <div class="project__img">
+          <img src="assets/images/project-3.jpg" alt="" />
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
+        </div>
+        <div class="project__img">
+          <img src="assets/images/project-4.jpg" alt="" />
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
+        </div>
+        <div class="project__img">
+          <img src="assets/images/project-5.jpg" alt="" />
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
+        </div>
+        <div class="project__img">
+          <img src="assets/images/project-6.jpg" alt="" />
+          <div class="details">
+            <h2>Creative</h2>
+            <h1>Web Development</h1>
+            <i class="fa fa-arrow-circle-right"></i>
+          </div>
+        </div>
+      </div>
     </section>
     <!-- team section -->
-        <section class="team">
-            <h1>Meet Our Team</h1>
-            <div class="grid-wrapper">
-                <div class="team__member">
-                    <img src="assets/images/team1.png" alt="">
-                    <h1>John Smith</h1>
-                    <h2>CEO & Founder</h2>
-                    <div class="social__icons">
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
-
-                    </div>
-                </div>
-                <div class="team__member">
-                    <img src="assets/images/team3.png" alt="">
-                    <h1>Smith</h1>
-                    <h2>web Design</h2>
-                    <div class="social__icons">
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
-
-                    </div>
-                </div>
-                <div class="team__member">
-                    <img src="assets/images/team4.png" alt="">
-                    <h1>John</h1>
-                    <h2>Web Development</h2>
-                    <div class="social__icons">
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
-
-                    </div>
-                </div>
-                <div class="team__member">
-                    <img src="assets/images/team2.png" alt="">
-                    <h1>Sophia</h1>
-                    <h2>Manager</h2>
-                    <div class="social__icons">
-                        <i class="fab fa-facebook"></i>
-                        <i class="fab fa-twitter"></i>
-                        <i class="fab fa-instagram"></i>
-                        <i class="fab fa-linkedin"></i>
-
-                    </div>
-                </div>
-
-            </div>
-        </section>
+    <section class="team">
+      <h1>Meet Our Team</h1>
+      <div class="grid-wrapper">
+        <div class="team__member">
+          <img src="assets/images/team1.png" alt="" />
+          <h1>John Smith</h1>
+          <h2>CEO & Founder</h2>
+          <div class="social__icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="team__member">
+          <img src="assets/images/team3.png" alt="" />
+          <h1>Smith</h1>
+          <h2>web Design</h2>
+          <div class="social__icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="team__member">
+          <img src="assets/images/team4.png" alt="" />
+          <h1>John</h1>
+          <h2>Web Development</h2>
+          <div class="social__icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+        <div class="team__member">
+          <img src="assets/images/team2.png" alt="" />
+          <h1>Sophia</h1>
+          <h2>Manager</h2>
+          <div class="social__icons">
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-linkedin"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- testimonials -->
+    <section class="testimonials">
+      <h1 class="testimonials__title">what our clients says</h1>
+      <p class="testimonials__subtitle">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam aut
+        incidunt odit, dolorum harum ut!
+      </p>
+      <div class="grid-wrapper">
+        <div class="review">
+          <i class="fa fa-quote-right"></i>
+          <div class="profile">
+            <img src="assets/images/team1.png" alt="" />
+            <h1>John Doe</h1>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit
+            voluptate deleniti quis praesentium minus ad id. Quis, minus nihil.
+            Quibusdam, dolore? Quibusdam, dolor quo reiciendis quas ut
+            voluptatibus. Dolorum, excepturi.
+          </p>
+        </div>
+        <div class="review">
+          <i class="fa fa-quote-right"></i>
+          <div class="profile">
+            <img src="assets/images/team1.png" alt="" />
+            <h1>John Doe</h1>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit
+            voluptate deleniti quis praesentium minus ad id. Quis, minus nihil.
+            Quibusdam, dolore? Quibusdam, dolor quo reiciendis quas ut
+            voluptatibus. Dolorum, excepturi.
+          </p>
+        </div>
+        <div class="review">
+          <i class="fa fa-quote-right"></i>
+          <div class="profile">
+            <img src="assets/images/team1.png" alt="" />
+            <h1>John Doe</h1>
+          </div>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Impedit
+            voluptate deleniti quis praesentium minus ad id. Quis, minus nihil.
+            Quibusdam, dolore? Quibusdam, dolor quo reiciendis quas ut
+            voluptatibus. Dolorum, excepturi.
+          </p>
+        </div>
+      </div>
+    </section>
+    <!-- Blogs -->
+    <section class="blogs">
+      
+    </section>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
