compelete blog section

--- a/index.html
+++ b/index.html
@@ -277,7 +277,42 @@
     </section>
     <!-- Blogs -->
     <section class="blogs">
-      
+      <h1 class="blogs__title">Our latests blogs</h1>
+      <div class="grid-wrapper">
+        <div class="blog">
+          <img src="assets/images/blog1.png" alt="" />
+          <h1>Powerful app for tracking daily activities</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Necessitatibus nam dolorem et facere itaque, exercitationem aperiam,
+            explicabo saepe eius suscipit praesentium. Id porro cumque omnis
+            architecto doloribus assumenda eligendi. Ipsam.
+          </p>
+          <a href="#" class=>Read more...</a>
+        </div>
+        <div class="blog">
+          <img src="assets/images/blog2.png" alt="" />
+          <h1>Powerful app for tracking daily activities</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Necessitatibus nam dolorem et facere itaque, exercitationem aperiam,
+            explicabo saepe eius suscipit praesentium. Id porro cumque omnis
+            architecto doloribus assumenda eligendi. Ipsam.
+          </p>
+          <a href="#" class=>Read more...</a>
+        </div>
+        <div class="blog">
+          <img src="assets/images/blog3.png" alt="" />
+          <h1>Powerful app for tracking daily activities</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Necessitatibus nam dolorem et facere itaque, exercitationem aperiam,
+            explicabo saepe eius suscipit praesentium. Id porro cumque omnis
+            architecto doloribus assumenda eligendi. Ipsam.
+          </p>
+          <a href="#" class=>Read more...</a>
+        </div>
+      </div>
     </section>
     <script src="assets/js/main.js"></script>
   </body>
