compelete call to action

--- a/index.html
+++ b/index.html
@@ -314,6 +314,16 @@
         </div>
       </div>
     </section>
+    <!-- call to action -->
+    <section class="getstarted">
+      <div class="ctn__container">
+        <div class="ctn__text">
+          <h1>Get Connected With TechBees</h1> 
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing </p>
+        </div>
+        <button class="ctn__btn">Get Started</button>
+      </div>
+    </section>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
